--- a/src/main/resources/templates/eventsPage.html
+++ b/src/main/resources/templates/eventsPage.html
@@ -15,12 +15,15 @@
             const selectedPublishers = JSON.parse(decodeURIComponent(publishersParam));
             const subscriberId = urlParams.get('subscriberId');
             const requestport = urlParams.get('port');
+            const subIp = urlParams.get('subIp');
+            const subPrivateIp = urlParams.get('subPrivateIp');
 
             console.log('Subscriber ID:', subscriberId);
             console.log(selectedPublishers);
 
             //change url to real one i.e. subscriber url and for respective ec2 instance
-            const url = 'http://192.168.4.26:8081/events';
+            //const url = 'http://192.168.4.26:8081/events';
+            const url = 'http://' +subIp + ':8080/events';
 
             function fetchDataAndRender() {
                 // Make an AJAX request to your Java code endpoint
@@ -40,16 +43,15 @@
                 // Assuming you have a div with id "eventsContainer" to display the events
                 var eventsContainer = document.getElementById('eventsContainer');
 
-                // Clear existing content
-                eventsContainer.innerHTML = '';
+              
 
                 // Iterate through the received data and create HTML elements
                 data.forEach(event => {
                     var eventElement = document.createElement('div');
                 eventElement.innerHTML = `
+                        <strong>Publisher Name:</strong> ${event.publisherId}<br>
                         <strong>Event ID:</strong> ${event.eventId}<br>
                         <strong>Occasion:</strong> ${event.occasion}<br>
-                        <strong>Publisher Name:</strong> ${event.publisherName}<br>
                         <strong>Event Location:</strong> ${event.eventLocation}<br>
                         <strong>Message:</strong> ${event.message}<br>
                         <hr>
@@ -70,6 +72,8 @@
 
                 const unsubscribeUrl = "/unsubscribePage?publishers=" + encodeURIComponent(JSON.stringify(selectedPublishers))
                     + "&subscriberId=" + encodeURIComponent(subscriberId.toString())
+                    + "&subIp=" + encodeURIComponent(subIp)
+                    + "&subPrivateIp=" + encodeURIComponent(subPrivateIp)
                     + "&port=" + encodeURIComponent(requestport.toString());
 
                 window.location.href = unsubscribeUrl;
